samples/_failures_safe/1761045310_9d28e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a1eeb1e1.c: In function ‘main’:
./samples/SAFE/__tmp_a1eeb1e1.c:140:5: error: expected declaration or statement at end of input
  140 |     }
      |     ^
